--- a/app/src/main/res/layout/fragment_recipe_creation.xml
+++ b/app/src/main/res/layout/fragment_recipe_creation.xml
@@ -99,26 +99,31 @@
         <TextView
             style="@style/section_title"
             android:text="@string/types" />
-        <CheckBox
-            android:id="@+id/checkbox_eu"
+        <RadioGroup
+            android:id="@+id/categoryRecipeCheckbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <RadioButton
+            android:id="@+id/checkboxEu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/european" />
-        <CheckBox
-            android:id="@+id/checkbox_as"
+        <RadioButton
+            android:id="@+id/checkboxAs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/asian" />
-        <CheckBox
-            android:id="@+id/checkbox_na"
+        <RadioButton
+            android:id="@+id/checkboxNa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/american" />
-        <CheckBox
-            android:id="@+id/checkbox_ru"
+        <RadioButton
+            android:id="@+id/checkboxRu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/russian" />
+        </RadioGroup>
 
         <Space
             android:layout_width="0dp"
@@ -132,6 +137,11 @@
         <Space
             android:layout_width="0dp"
             android:layout_height="@dimen/app_padding" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/cancel_button"
+            style="@style/fullWidthButton"
+            android:text="@string/cancel" />
     </LinearLayout>
 
 </ScrollView>
