--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -6,9 +6,41 @@
     app:startDestination="@id/mainFragment">
 
     <fragment
+        android:id="@+id/mainFragment"
+        android:name="ru.netology.nerecipes.MainFragment"
+        tools:layout="@layout/main_fragment" >
+        <action
+            android:id="@+id/action_mainFragment_to_recipeViewFragment"
+            app:destination="@id/recipeViewFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_recipeCreationFragment"
+            app:destination="@id/recipeCreationFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_favFragment"
+            app:destination="@id/favFragment" />
+
+        <argument
+            android:name="ShowAppBar"
+            android:defaultValue="true" />
+        <action
+            android:id="@+id/action_mainFragment_to_filterFragment"
+            app:destination="@id/filterFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/recipeViewFragment"
+        android:name="ru.netology.nerecipes.fragments.RecipeViewFragment"
+        tools:layout="@layout/fragment_recipe_view_fragment">
+        <argument
+            android:name="recipeCardId"
+            app:argType="long"
+            app:nullable="false" />
+        <action
+            android:id="@+id/action_recipeViewFragment_to_recipeCreationFragment"
+            app:destination="@id/recipeCreationFragment" />
+    </fragment>
+    <fragment
         android:id="@+id/recipeCreationFragment"
         android:name="ru.netology.nerecipes.fragments.RecipeCreationFragment"
-        android:label="RecipeCreationFragment"
         tools:layout="@layout/fragment_recipe_creation">
         <argument
             android:name="currentRecipe"
@@ -16,53 +48,39 @@
             app:nullable="true" />
     </fragment>
     <fragment
-        android:id="@+id/mainFragment"
-        android:name="ru.netology.nerecipes.MainFragment"
-        android:label="MainFragment"
-        tools:layout="@layout/main_fragment">
+        android:id="@+id/favFragment"
+        android:name="ru.netology.nerecipes.fragments.FavFragment"
+        android:label="FavFragment"
+        tools:layout="@layout/fragment_fav">
         <action
-            android:id="@+id/action_mainFragment_to_recipeCreationFragment"
-            app:destination="@id/recipeCreationFragment"
-            app:enterAnim="@android:anim/fade_in"
-            app:exitAnim="@android:anim/fade_out"
-            app:popEnterAnim="@android:anim/fade_in"
-            app:popExitAnim="@android:anim/fade_out"/>
-        <action
-            android:id="@+id/action_mainFragment_to_recipeFilterFragment"
-            app:destination="@id/recipeFilterFragment"
-            app:enterAnim="@android:anim/fade_in"
-            app:exitAnim="@android:anim/fade_out"
-            app:popEnterAnim="@android:anim/fade_in"
-            app:popExitAnim="@android:anim/fade_out"/>
-        <action
-            android:id="@+id/action_mainFragment_to_recipe_view_fragment"
-            app:destination="@id/recipeViewFragment"
-            app:enterAnim="@android:anim/fade_in"
-            app:exitAnim="@android:anim/fade_out"
-            app:popEnterAnim="@android:anim/fade_in"
-            app:popExitAnim="@android:anim/fade_out"/>
-    </fragment>
-    <fragment
-        android:id="@+id/recipeViewFragment"
-        android:name="ru.netology.nerecipes.fragments.RecipeViewFragment"
-        android:label="fragment_recipe_filter"
-        tools:layout="@layout/fragment_recipe_view_fragment" >
+            android:id="@+id/action_favFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
+
         <argument
-            android:name="recipeCardId"
-            app:argType="long"
-            app:nullable="false" />
+            android:name="ShowAppBar"
+            android:defaultValue="true" />
+        <action
+            android:id="@+id/action_favFragment_to_recipeViewFragment"
+            app:destination="@id/recipeViewFragment" />
+        <action
+            android:id="@+id/action_favFragment_to_recipeCreationFragment"
+            app:destination="@id/recipeCreationFragment" />
 
     </fragment>
     <fragment
-        android:id="@+id/recipeFilterFragment"
+        android:id="@+id/filterFragment"
         android:name="ru.netology.nerecipes.fragments.RecipeFilterFragment"
-        android:label="RecipeFilterFragment"
-        tools:layout="@layout/fragment_recipe_filter"
-        app:enterAnim="@android:anim/fade_in"
-        app:exitAnim="@android:anim/fade_out"
-        app:popEnterAnim="@android:anim/fade_in"
-        app:popExitAnim="@android:anim/fade_out">
+        android:label="FilterFragment"
+        tools:layout="@layout/fragment_recipe_filter">
+        <argument
+            android:name="ShowAppBar"
+            android:defaultValue="true" />
+        <action
+            android:id="@+id/action_filterFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
 
     </fragment>
+
+
 
 </navigation>
