--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="section">18sp</dimen>
     <dimen name="recipe_time_size">14sp</dimen>
     <dimen name="default_text_size">16sp</dimen>
+    <dimen name="icon_button_min_size">32dp</dimen>
+    <dimen name="icon_button_padding_size">12dp</dimen>
 </resources>
